--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
-theme: jekyll-theme-minimal
-show_downloads: False
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme
+show_downloads: True
